--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preload" as="image" href="./images/stock-background.jpg">
+    <link rel="preload" as="image" href="./images/thai.png">
+    <link rel="preload" as="image" href="./images/frog.png">
+    <link rel="preload" as="image" href="./images/mixer.png">
+    <link rel="preload" as="image" href="./images/steve.png">
+    <link rel="preload" as="image" href="./images/hearthstone.png">
     <title>Deyan Vasilev</title>
 </head>
 <body>
@@ -190,7 +196,7 @@
                     </p>
                 </div>
                 <div class="column2">
-                    <img alt="Screenshot of cocktails" src="./images/cocktailsearch.png" />
+                    <img alt="Screenshot of cocktails" src="./images/mixer.png" />
                 </div>
             </div>
             </li>
