--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         <div class="about-container">
             <div class="about-bio">
                 <p>
-                Hello World! My name is Deyan and I am Front-end Software Engineer. I am originnally from Bulgaria and have lived in the United States since 2012.<br><br>
+                Hello World! My name is Deyan and I am Front-end Software Engineer. I am originally from Bulgaria and have lived in the United States since 2012.<br><br>
                 I specialize in developing web applications with React, but my skillset extends well beyond that. I am also more than capable of producing
                 quality back-end work when needed, as demonstrated by my work experience and personal projects. At my previous job I was able to successfully step in 
                 as full-stack developer on multiple occasions. My flexibility allowed my team to reduce bottlenecks and ship features faster. <br><br>
-                Throughout my career I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has done wonders 
-                for my professional development. I enjoy tackling complex problems, crafting innovative solutions, and challenging the conventions 
+                Throughout my career I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has helped me grow 
+                immensely in all of my roles. I enjoy tackling complex problems, crafting innovative solutions, and challenging the conventions 
                 of our industry. <br><br>
                 Outside of Software Engineering I have close to 10 years of experience in the restaurant industry 
                 where I learned and applied crucial concepts such as teamwork, customer service, and 
@@ -236,10 +236,10 @@
                     <div class="project-information">
                         <h4 class="tech-stack">Tech stack: HTML, CSS</h4>
                         <p class="project-description">
-                            Steve is a static, portfolio website template built with plain HTML and CSS that focuses on providing a clean,
-                            simplistic UI and great mobile responsiveness. It provides a good starting point for people 
-                            who need a portfolio website, who can then make it theirs by adding their own styling. <br>
-                            This portfolio website uses Steve as the base.
+                            Steve is a static portfolio website template built with plain HTML and CSS that focuses on providing a clean,
+                            simplistic UI with great mobile responsiveness. It provides a great starting point for people 
+                            who need a portfolio website.  <br>
+                            This website uses Steve as the base.
                         </p>
                         <div class="project-links">
                             <a target="_blank" href="https://lemonstener.github.io/steve/"><button role="link" class="btn-live">Website</button></a> 
