update downloand cv button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 forward to hearing from you!
                 
                 </p> <br>
-                <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button class="btn-live">RESUME</button></a> 
+                <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button role="link" class="btn-live cv-button">RESUME</button></a> 
             </div>
         </div>
     </section>
