--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Deyan Vasilev</title>
 </head>
 <body>
-
+<main>
     <!-- Navigation bar -->
 
     <header>
@@ -33,7 +33,7 @@
           <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view">Download CV</a></li>
+            <li><a target="_blank" aria-label="Download Resume in new tab" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view">Download CV</a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -45,7 +45,7 @@
           <ul class="mobile-menu">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view">Download CV</a></li>
+            <li><a target="_blank" aria-label="Download Resume in new tab" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view">Download CV</a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -84,7 +84,7 @@
                 forward to hearing from you!
                 
                 </p> <br>
-                <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button role="link" class="btn-live cv-button">RESUME</button></a> 
+                <a aria-label="Download Resume in new tab" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view"><button role="link" class="btn-live cv-button">RESUME</button></a> 
             </div>
         </div>
     </section>
@@ -140,7 +140,7 @@
                             Other duties included writing documentation, code reviews, participating in SCRUM ceremonies, and more.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" href="https://commerciosupport.zendesk.com/hc/en-us"><button class="btn-live" role="link">More information</button></a>
+                            <a target="_blank" aria-label="Opens Orders Knowledge Base website in new tab" href="https://commerciosupport.zendesk.com/hc/en-us"><button class="btn-live" role="link">More information</button></a>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         handling blog functionality through a Content Management System, as well as improving Search Engine Optimization.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" href="https://www.thaisportmassage.com/"><button role="link" class="btn-live">Website</button></a>
+                            <a target="_blank" aria-label="Opens website in new tab" href="https://www.thaisportmassage.com/"><button role="link" class="btn-live">Website</button></a>
                         </div>
                 </div>
                 </div>
@@ -187,8 +187,8 @@
                             the Mintbean Star Award for "exemplary achievement in the field of web development".
                         </p>
                         <div class="project-links">
-                            <a target="_blank" href="https://lemonstener.github.io/frog-feast/"><button role="link" class="btn-live">Website</button></a>
-                            <a target="_blank" href="https://github.com/lemonstener/frog-feast"><button role="link" class="btn-source">GitHub</button></a>
+                            <a target="_blank" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/"><button role="link" class="btn-live">Website</button></a>
+                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast"><button role="link" class="btn-source">GitHub</button></a>
                         </div>
                 </div>
                 </div>
@@ -216,8 +216,8 @@
                             I'm currently working on resolving that, but you can still view all of the code on GitHub.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" href="https://github.com/lemonstener/mixer-db"><button role="link" class="btn-source">GitHub BE</button></a>
-                            <a target="_blank" href="https://github.com/lemonstener/mixer-frontend"><button role="link" class="btn-source">GitHub FE</button></a>
+                            <a target="_blank" aria-label="Opens GitHub back end repository in new tab" href="https://github.com/lemonstener/mixer-db"><button role="link" class="btn-source">GitHub BE</button></a>
+                            <a target="_blank" aria-label="Opens GitHub front end repository in new tab" href="https://github.com/lemonstener/mixer-frontend"><button role="link" class="btn-source">GitHub FE</button></a>
                         </div>
                 </div>
                 </div>
@@ -242,8 +242,8 @@
                             This website uses Steve as the base.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" href="https://lemonstener.github.io/steve/"><button role="link" class="btn-live">Website</button></a> 
-                            <a target="_blank" href="https://github.com/lemonstener/steve"><button role="link" class="btn-source">GitHub</button></a>
+                            <a target="_blank" aria-label="Opens website in new tab" href="https://lemonstener.github.io/steve/"><button role="link" class="btn-live">Website</button></a> 
+                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/steve"><button role="link" class="btn-source">GitHub</button></a>
                         </div>
                 </div>
                 </div>
@@ -269,14 +269,14 @@
                             I'm currently working on resolving that, but you can still view all of the code on GitHub.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" href="https://github.com/lemonstener/hearthstone-forge"><button role="link" class="btn-source">GitHub</button></a>
+                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/hearthstone-forge"><button role="link" class="btn-source">GitHub</button></a>
                         </div>
                 </div>
                 </div>
             </li>
         </ul>
     </section>
-
+</main>
     <!-- Contact & Footer -->
 
     <footer>
@@ -284,10 +284,10 @@
             <div class="contact-details">
                 <h3 class="contact-heading">Let's get in touch!</h3>
                 <div class="contact-icons">
-                    <a aria-label="Deyan Vasilev on LinkedIn" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/"><i class="fab fa-linkedin linkedin"></i></a>
-                    <a aria-label="Deyan Vasilev on GitHub" target="_blank" href="https://github.com/lemonstener"><i class="fab fa-github github"></i></a>
-                    <a aria-label="Send an email to Deyan Vasilev" target="_blank" href="mailto: deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
-                    <a aria-label="Download Resume" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
+                    <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/"><i class="fab fa-linkedin linkedin"></i></a>
+                    <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener"><i class="fab fa-github github"></i></a>
+                    <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto: deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
+                    <a aria-label="Download Resume in new tab" target="_blank" href="https://drive.google.com/file/d/1iCi3cP-gXztstduqIQFq4wJ1ZBPEuavc/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
                 </div>
             </div>
         </section>
