--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3 class="skills-category">Other tools:</h3>
             <p class="skills-list">SQL, Python, C#, Express, Webflow</p><br>
             <h3 class="skills-category">Methodologies and patterns:</h3>
-            <p class="skills-list">AGILE, SCRUM, REST, MVC, OOP</p><br>
+            <p class="skills-list">Agile, Scrum, REST, CRUD, MVC, OOP</p><br>
             <h3 class="skills-category">I am a big proponent of:</h3>
             <p class="skills-list">
                 Simple and flexible code, Accessibility, Consistent UX, Mobile responsiveness, Testing, Continuous learning, Delivering 
