--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                             I have worked on almost every feature of this application, but most notably I have: 
                         </p>
                             <ul class="achievements">
+                                <li>Created internal tools and components for form handling which decreased development time of forms by 90%, significantly improved 
+                                    form performance across the application, reduced unnecessary rerenders, eliminated huge chunks of unoptimized code, reduced dependencies, 
+                                    and provided a consistent UX across forms
+                                </li>
+                                <li>Increased test coverage by 22% on the front end</li>
                                 <li>Fully owned the <span class="strong">Status Management</span> feature for Purchase Orders, Quotes, 
                                     and Products on the front end and did additional work on the back end
                                 </li>
@@ -149,13 +154,9 @@
                                     Other work includes querying, sorting, filters, UI, and more
                                 </li>
                                 <li>Implemented the <span class="strong">Digital Art Proof</span> feature for purchase orders on both the front and back end</li>
-                                <li>Created internal tools and components for form handling which decreased development time of forms by 90%, significantly improved 
-                                    form performance across the application, eliminated huge chunks of unoptimized code, reduced dependencies, provided consistent 
-                                    UX across forms, and increased test coverage by 22% and counting
-                                </li>
                                 <li>Led the charge on the complete refactor of the  <span class="strong">Purchase Order Configuration</span> and 
                                     <span class="strong">Sharing</span> features on the front end, which eliminated numerous bugs and typescript errors, 
-                                    improved performance, organized and simplified the codebase, and eliminated over 5000 lines of inefficient code
+                                    improved performance, organized and simplified the codebase, and eliminated over 4000 lines of inefficient code
                                 </li>
                             </ul>
                         <p class="description">
