--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
         <div class="skills-container">
             <h3 class="skills-category">Specializations:</h3>
-            <p class="skills-list">React, TypeScript, JavaScript, HTML, CSS, React Testing Library</p><br>
+            <p class="skills-list">React, Node, TypeScript, JavaScript, HTML, CSS, React Testing Library</p><br>
             <h3 class="skills-category">Other tools:</h3>
-            <p class="skills-list">SQL, Python, C#, Node, Express, Webflow</p><br>
+            <p class="skills-list">SQL, Python, C#, Express, Webflow</p><br>
             <h3 class="skills-category">Methodologies and patterns:</h3>
             <p class="skills-list">Agile, Scrum, REST, CRUD, MVC, OOP</p><br>
             <h3 class="skills-category">I am a big proponent of:</h3>
