sprucing it up with some color

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <div class="about-bio">
                     <p>
                     Hello World! My name is Deyan and I am Front-end Software Engineer. I am originally from Bulgaria and have lived in the United States since 2012.<br><br>
-                    I specialize in developing SPA applications with React and JavaScript, but my skillset extends well beyond that. Throughout my career I have owned a number of crucial features, 
+                    I specialize in developing SPA applications with React and JavaScript, but my skillset extends well beyond that. <br>
+                    Throughout my career I have owned a number of crucial features, 
                     refactors, and bug fixes, as well as high code test coverage. I am also more than capable of producing
                     quality back-end work when needed, as demonstrated by my work experience and personal projects. <br> <br>
                     I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has helped me grow 
@@ -80,7 +81,7 @@
                     If you like what you see, feel free to check out my resume or reach out to me directly! I am looking 
                     forward to hearing from you! 
                     </p> <br>
-                    <a target="_blank" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing"><button role="link" class="btn-live">Resume</button></a>
+                    <a target="_blank" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing"><button role="link" class="btn-live">Download CV <i class="fa-solid fa-download"></i></button></a>
                 </div>
             </div>
         </section>
@@ -203,7 +204,7 @@
                             Other duties included writing documentation, code reviews, participating in SCRUM ceremonies, and more.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" aria-label="Opens Orders Knowledge Base website in new tab" href="https://commerciosupport.zendesk.com/hc/en-us"><button class="btn-live" role="link">More information</button></a>
+                            <a target="_blank" aria-label="Opens Orders Knowledge Base website in new tab" href="https://commerciosupport.zendesk.com/hc/en-us"><button class="btn-live" role="link">More information <i class="fa-solid fa-link"></i></button></a>
                         </div>
                     </div>
                 </div>
@@ -226,7 +227,7 @@
                         handling blog functionality through a Content Management System, as well as improving Search Engine Optimization.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" aria-label="Opens website in new tab" href="https://www.thaisportmassage.com/"><button role="link" class="btn-live">Website</button></a>
+                            <a target="_blank" aria-label="Opens website in new tab" href="https://www.thaisportmassage.com/"><button role="link" class="btn-live">Website <i class="fa-solid fa-link"></i></button></a>
                         </div>
                 </div>
                 </div>
@@ -250,8 +251,8 @@
                             the Mintbean Star Award for "exemplary achievement in the field of web development".
                         </p>
                         <div class="project-links">
-                            <a target="_blank" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/"><button role="link" class="btn-live">Website</button></a>
-                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast"><button role="link" class="btn-source">GitHub</button></a>
+                            <a target="_blank" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/"><button role="link" class="btn-live">Website <i class="fa-solid fa-link"></i></button></a>
+                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast"><button role="link" class="btn-source">GitHub <i class="fa-solid fa-link"></i></button></a>
                         </div>
                 </div>
                 </div>
@@ -280,7 +281,7 @@
                         </p>
                         <div class="project-links">
                             <a target="_blank" aria-label="Opens GitHub back end repository in new tab" href="https://github.com/lemonstener/mixerdb"><button role="link" class="btn-source">GitHub BE</button></a>
-                            <a target="_blank" aria-label="Opens GitHub front end repository in new tab" href="https://github.com/lemonstener/mixer-frontend"><button role="link" class="btn-source">GitHub FE</button></a>
+                            <a target="_blank" aria-label="Opens GitHub front end repository in new tab" href="https://github.com/lemonstener/mixer-frontend"><button role="link" class="btn-source">GitHub FE <i class="fa-solid fa-link"></i></button></a>
                         </div>
                 </div>
                 </div>
@@ -306,7 +307,7 @@
                             I'm currently working on resolving that, but you can still view all of the code on GitHub.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/hearthstone-forge"><button role="link" class="btn-source">GitHub</button></a>
+                            <a target="_blank" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/hearthstone-forge"><button role="link" class="btn-source">GitHub <i class="fa-solid fa-link"></i></button></a>
                         </div>
                 </div>
                 </div>
