--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section id="about">
             <div class="section-header">
                 <h2>About Me</h2>
-                <p>I am a T-shaped, Front-end Software Engineer based in the St. Louis Metropolitan area</p>
+                <p>I am a T-shaped, Front-end Software Engineer based in the Greater Saint Louis area</p>
             </div>
             <div class="about-container">
                 <div class="about-bio">
@@ -90,8 +90,7 @@
 
     <section id="skills">
         <div class="section-header">
-            <h2>Skills</h2>
-            <p>I specialize in Front-end Web development</p>   
+            <h2>Skills</h2> 
         </div>
 
         <div class="technologies">
@@ -280,7 +279,7 @@
                             I'm currently working on resolving that, but you can still view all of the code on GitHub.
                         </p>
                         <div class="project-links">
-                            <a target="_blank" aria-label="Opens GitHub back end repository in new tab" href="https://github.com/lemonstener/mixerdb"><button role="link" class="btn-source">GitHub BE</button></a>
+                            <a target="_blank" aria-label="Opens GitHub back end repository in new tab" href="https://github.com/lemonstener/mixerdb"><button role="link" class="btn-source">GitHub BE <i class="fa-solid fa-link"></i></button></a>
                             <a target="_blank" aria-label="Opens GitHub front end repository in new tab" href="https://github.com/lemonstener/mixer-frontend"><button role="link" class="btn-source">GitHub FE <i class="fa-solid fa-link"></i></button></a>
                         </div>
                 </div>
